logs/param/build.make.124.log.stderr
In file included from /opt/ros/kinetic/include/ros/ros.h:40:0,
                 from /home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:3:
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:49:75: error: ‘ppose’ was not declared in this scope
     ROS_INFO_STREAM( j << " Theta: " << turtle_pose.theta << " PPose:" << ppose);
                                                                           ^
/opt/ros/kinetic/include/ros/console.h:356:64: note: in definition of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION_WITH_FILTER’
     __rosconsole_print_stream_at_location_with_filter__ss__ << args; \
                                                                ^
/opt/ros/kinetic/include/ros/console.h:398:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION’
       ROSCONSOLE_PRINT_STREAM_AT_LOCATION(args); \
       ^
/opt/ros/kinetic/include/ros/console.h:568:43: note: in expansion of macro ‘ROS_LOG_STREAM_COND’
 #define ROS_LOG_STREAM(level, name, args) ROS_LOG_STREAM_COND(true, level, name, args)
                                           ^
/opt/ros/kinetic/include/rosconsole/macros_generated.h:111:31: note: in expansion of macro ‘ROS_LOG_STREAM’
 #define ROS_INFO_STREAM(args) ROS_LOG_STREAM(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, args)
                               ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:49:5: note: in expansion of macro ‘ROS_INFO_STREAM’
     ROS_INFO_STREAM( j << " Theta: " << turtle_pose.theta << " PPose:" << ppose);
     ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:53:9: error: ‘ppose’ was not declared in this scope
     if (ppose < turtle_pose.theta){j++;}
         ^
In file included from /opt/ros/kinetic/include/ros/ros.h:40:0,
                 from /home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:3:
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:55:76: error: ‘ppose’ was not declared in this scope
      ROS_INFO_STREAM( j << " Theta: " << turtle_pose.theta << " PPose:" << ppose);
                                                                            ^
/opt/ros/kinetic/include/ros/console.h:356:64: note: in definition of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION_WITH_FILTER’
     __rosconsole_print_stream_at_location_with_filter__ss__ << args; \
                                                                ^
/opt/ros/kinetic/include/ros/console.h:398:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION’
       ROSCONSOLE_PRINT_STREAM_AT_LOCATION(args); \
       ^
/opt/ros/kinetic/include/ros/console.h:568:43: note: in expansion of macro ‘ROS_LOG_STREAM_COND’
 #define ROS_LOG_STREAM(level, name, args) ROS_LOG_STREAM_COND(true, level, name, args)
                                           ^
/opt/ros/kinetic/include/rosconsole/macros_generated.h:111:31: note: in expansion of macro ‘ROS_LOG_STREAM’
 #define ROS_INFO_STREAM(args) ROS_LOG_STREAM(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, args)
                               ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:55:6: note: in expansion of macro ‘ROS_INFO_STREAM’
      ROS_INFO_STREAM( j << " Theta: " << turtle_pose.theta << " PPose:" << ppose);
      ^
make[2]: *** [CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_spiral.dir/all] Error 2
make: *** [all] Error 2
